2010-05-05  Stas Boukarev  <stassats@gmail.com>

	* slime-tramp.el (slime-tramp-to-lisp-filename): Check if slime is
	connected, because slime-to-lisp-filename is now used for
	establishing connection.

2010-05-05  Helmut Eller  <heller@common-lisp.net>

	* slime-editing-commands.el: Fix typo.

2010-05-01  Stas Boukarev  <stassats@gmail.com>

	* slime-fuzzy.el(slime-fuzzy-dehighlight-current-completion):
	instead of creating new overlays, move one overlay around.
	(slime-mimic-key-bindings): Renamed from mimic-key-bindings.
	Patch by Leo Liu.

2010-05-01  Stas Boukarev  <stassats@gmail.com>

	* slime-repl.el (slime-repl-update-banner): Use slime-move-point
	instead of goto-char alone, ensuring that the point is moved even
	if the window isn't currently selected.

2010-04-18  Stas Boukarev  <stassats@gmail.com>

	* slime-presentations.el
	(slime-repl-grab-old-output,slime-copy-or-inspect-presentation-at-mouse):
	If the presentation at point is no longer available, remove
	presentation properties from the object.
	* swank-presentations.lisp (lookup-presented-object): defun->defslimefun.

2010-04-06  Stas Boukarev  <stassats@gmail.com>

	* slime-c-p-c.el (slime-complete-symbol*-fancy-bit): There is no
	slime-space-information-p variable anymore.
	Patch by Steven H. Margolis.

2010-04-06  Stas Boukarev  <stassats@gmail.com>

	* slime-sprof.el (slime-sprof-format): Remove references to the
	removed code.

2010-04-05  Stas Boukarev  <stassats@gmail.com>

	* slime-repl.el (slime-repl-inside-string-or-comment-p): New
	function, when in the REPL prompt, narrow the search to the
	prompt, otherwise stray " from the previous prompts
	or outputs may confuse slime-inside-string-or-comment-p.

	* slime-autodoc.el (slime-autodoc): Use
	slime-repl-inside-string-or-comment-p when fbound.

2010-04-05  Stas Boukarev  <stassats@gmail.com>

	* slime-autodoc.el (slime-autodoc-manually): Rename from
	slime-autodoc-full.
	Like slime-autodoc, but when called twice,